@@ -1892,9 +1892,9 @@ static void polygonEdge(double *x, double *y, int n, double theta, double *edgex
     xm = (xmin + xmax) / 2;
     ym = (ymin + ymax) / 2;
     /*
-     * Special case zero-width or zero-height
+     * Special case VERY tall and narrow or VERY short and wide
      */
-    if (fabs(xmin - xmax) < 1e-6)
+    if (fabs(xmin - xmax) < 1e-6 || fabs(ymin - ymax) / fabs(xmin - xmax) > 1000)
     {
         *edgex = xmin;
         if (theta == 90)
@@ -1905,7 +1905,7 @@ static void polygonEdge(double *x, double *y, int n, double theta, double *edgex
             *edgey = ym;
         return;
     }
-    if (fabs(ymin - ymax) < 1e-6)
+    if (fabs(ymin - ymax) < 1e-6 || fabs(xmin - xmax) / fabs(ymin - ymax) > 1000)
     {
         *edgey = ymin;
         if (theta == 0)
@@ -3578,7 +3578,7 @@ static SEXP gridText(SEXP label, SEXP x, SEXP y, SEXP hjust, SEXP vjust, SEXP ro
     R_GE_gcontext gc, gcCache;
     LTransform transform;
     SEXP txt, result = R_NilValue;
-    double edgex, edgey;
+    double edgex = 0, edgey = 0;
     double xmin = DBL_MAX;
     double xmax = -DBL_MAX;
     double ymin = DBL_MAX;
@@ -3729,6 +3729,7 @@ static SEXP gridText(SEXP label, SEXP x, SEXP y, SEXP hjust, SEXP vjust, SEXP ro
                      * Calculate edgex and edgey for case where this is
                      * the only rect
                      */
+                    if (R_FINITE(theta))
                     {
                         double xxx[4], yyy[4];
                         /*
@@ -3759,7 +3760,7 @@ static SEXP gridText(SEXP label, SEXP x, SEXP y, SEXP hjust, SEXP vjust, SEXP ro
              * If there is more than one text, just produce edge
              * based on bounding rect of all text
              */
-            if (ntxt > 1)
+            if (ntxt > 1 && R_FINITE(theta))
             {
                 /*
                  * Produce edge of rect bounding all text
